objects/Bike__c.object
<CustomObject>
    <fields>
        <fullName>BikeModelNumber__c</fullName>
        <label>BikeModelNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BikePrice__c</fullName>
        <label>BikePrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BikeShowrromLocation__c</fullName>
        <description>Location filed</description>
        <label>BikeShowrromLocation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BikeSpecifications__c</fullName>
        <description>Basic Info</description>
        <label>BikeSpecifications</label>
        <type>TextArea</type>
    </fields>
    <label>Bike</label>
    <nameField>
        <label>Bike Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bikes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>